--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,7 @@
     "angular-route": "~1.5.0",
     "angular-bootstrap": "latest",
     "angular-loader": "~1.5.0",
-    "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0",
+  
     "requirejs": "latest",
     "requirejs-domready": "latest",
     "underscore":"latest",
@@ -21,7 +20,6 @@
     "angular-cookies":"~1.5.0",
     "mongoose" : "~3.8.0",
     "body-parser" : "~1.4.2",
-"angular-file-upload":"latest",
-    "ng-file-upload" : "latest"
+    "highcharts":"latest"
   }
 }
