--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "method-override": "^2.3.8",
     "mongoose": "^4.9.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
